[package]
name = "monad-zkvm-sp1-script"
description = "Host driver and prover for the monad SP1 witness-execution guest"
version = "0.1.0"
edition = "2021"

[dependencies]
# Matches the SP1 zkEVM SDK version the guest libzkevm.a is built from —
# build-support compiles it from the v6.3.1 SP1 source (see build.rs).
sp1-sdk = "6.3.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
# Cross-builds the C++ guest archive and links it against libzkevm.a — built
# from the SP1 zkEVM SDK source (via sp1-build) — into the guest ELF. See build.rs.
monad-zkvm-build-support = { path = "../../build-support" }
